<resources>
    <string name="app_name">AndroEyeD</string>
    <string name="strConnect">Conecteaza Desktop</string>
    <string name="strID">Carte de Identitate</string>
    <string name="strPass">Pasaport</string>
    <string name="strLicense">Permis</string>
    <string name="strSearch">Cauta Fisier</string>
    <string name="camera_permission_confirmation">Permiteti folosirea camerei dispozitivului pentru a face poze.</string>
    <string name="camera_permission_not_granted">Nu se pot realiza poze fara permisiune</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="connectionName">connName</string>
    <string name="connectionIP">connIP</string>
    <string name="connectionMAC">connMAC</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="MRZ_hint">\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c\u003c</string>
    <string name="DUMPinfo">PRENUME\nNUME\nSEX\nTARA EMITERE\nNATIONALITATE\nDATA EXPIRARII\nDATA NASTERII\nCODPASAPORT\nSERIE\nCNP</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>
    <string name="typeselect">Alegeti modul</string>
    <string name="typepicture">Fotografiati si trimiteti</string>
    <string name="typeNFC">Scanare cip</string>
    <string name="cancel">Inapoi</string>
    <string name="NFCTitle">Scanare Cip NFC</string>
    <string name="NFCInfo">"Apropiati telefonul de pasaport, potrivind pozitia NFC-ului de pe telefon cu cea a cip-ului din pasaport, similar cu poza de mai sus"</string>
    <string name="chipConnect">Conexiune la cip</string>
    <string name="chipMRZInfo">Descarcare informatii</string>
    <string name="chipPic">Descarcare poza</string>
    <string name="NFCConnInfo">Mentineti telefonul in aceeasi pozitie fata de pasaport pana la citirea datelor</string>
    <string name="websiteLinkTitle"><u>Vezi EyeD-Read website</u></string>
</resources>
