<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464646"
    tools:context=".MainActivity">

    <ro.lockdowncode.eyedread.UI.MenuButton
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        app:menu_button_image="@mipmap/search"
        android:onClick="btnsClicked"
        app:menu_button_text="@string/strSearch"
        android:textColor="@color/colorEyeD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passlicense"
        app:layout_constraintVertical_bias="1.0" />

    <ro.lockdowncode.eyedread.UI.MenuButton
        android:id="@+id/btnID"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        app:menu_button_image="@mipmap/idcard"
        android:onClick="btnsClicked"
        android:padding="10dp"
        app:menu_button_text="@string/strID"
        android:textColor="@color/colorEyeD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnect"
        app:layout_constraintVertical_bias="0.338" />

    <ro.lockdowncode.eyedread.UI.MenuButton
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        app:menu_button_image="@mipmap/link"
        android:onClick="btnsClicked"
        android:padding="3dp"
        android:paddingBottom="3dp"
        app:menu_button_text="@string/strConnect"
        android:textColor="@color/colorEyeD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/passlicense"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnID"
        app:layout_constraintVertical_bias="1.0">

        <ro.lockdowncode.eyedread.UI.MenuButton
            android:id="@+id/btnPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            app:menu_button_image="@mipmap/pass"
            android:onClick="btnsClicked"
            android:padding="7dp"
            app:menu_button_text="@string/strPass"
            android:textColor="@color/colorEyeD" />

        <ro.lockdowncode.eyedread.UI.MenuButton
            android:id="@+id/btnLicense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            app:menu_button_image="@mipmap/license"
            android:onClick="btnsClicked"
            android:padding="7dp"
            app:menu_button_text="@string/strLicense"
            android:textColor="@color/colorEyeD" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>