<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Cauta document de tipul"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnID"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:drawableTop="@mipmap/idcard"
        android:onClick="searchDocSelected"
        android:padding="7dp"
        android:text="@string/strID"
        android:textColor="@color/colorEyeD"
        app:layout_constraintBottom_toTopOf="@+id/btnPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnPass"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:drawableTop="@mipmap/pass"
        android:onClick="searchDocSelected"
        android:padding="7dp"
        android:text="@string/strPass"
        android:textColor="@color/colorEyeD"
        app:layout_constraintBottom_toTopOf="@+id/btnLicense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnID"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLicense"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:drawableTop="@mipmap/license"
        android:onClick="searchDocSelected"
        android:padding="7dp"
        android:text="@string/strLicense"
        android:textColor="@color/colorEyeD"
        app:layout_constraintBottom_toTopOf="@+id/btnDocCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPass"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnDocCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg"
        android:onClick="searchDocSelected"
        android:text="@string/cancel"
        android:textColor="@color/colorEyeD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLicense" />

</android.support.constraint.ConstraintLayout>